CS_PROD_20150209_01/Metadata/unpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Commissionable_Potential__c</fullName>
        <description>Added by LM on 3/4/2013; From MS CRM</description>
        <inlineHelpText>This total=Last Year&apos;s Renewable Products-Last Year&apos;s Non-Commissionable Products</inlineHelpText>
        <label>Commissionable Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competition_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Competition Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Info__c</fullName>
        <description>Created by LM on 9/3/2013 for Phase 2 rollout</description>
        <label>Competitor Info</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <description>Added by MD 09/13/2012. A Field to hold the name of the Competitor that the Sale was Lost to or Stolen from</description>
        <inlineHelpText>A Competitor Name must be selected when Closing an Opportunity and the Close Reason is &quot;Competitor&quot;</inlineHelpText>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BurrellesLuce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Won&apos;t Say/Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Mention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dow Jones Factiva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobeNewswire/NASDAQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoogleNews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketwired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meltwater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moreover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyMediaInfo (MMI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR Newswire (Agility)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radian6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sysomos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TVEyes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_in_STX__c</fullName>
        <defaultValue>false</defaultValue>
        <description>temp field</description>
        <label>Confirmed in STX?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connect_Competitor_Date__c</fullName>
        <label>Connect Competitor Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Connect_Competitor__c</fullName>
        <label>Connect Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Vocus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Name_Attention__c</fullName>
        <description>Added by LM on 5/13/2013 for Eric McKeon</description>
        <inlineHelpText>For Fed Ex</inlineHelpText>
        <label>Contact Name/Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Id__c</fullName>
        <label>Contract Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Length_in_Months__c</fullName>
        <description>Added by LM on 3/4/2013; From MS CRM</description>
        <label>Contract Length in Months</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <description>Added by LM on 3/4/2013; From MS CRM</description>
        <label>Contract Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Sent_Date__c</fullName>
        <description>Added by LM on 3/4/2013; From MS CRM</description>
        <label>Contract Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 9/13/2013 for Phase 2 rollout</description>
        <label>Contract Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 9/3/2013 for Phase 2 rollout</description>
        <label>Contract Signer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Stx_Number_Total__c</fullName>
        <formula>LEN(Contract.ContractNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Stx Number Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copy_Billing_Address_to_Shipping_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Billing Address to Shipping Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedTime_Minus_55_Minutes__c</fullName>
        <description>Displays the Created time minus 55 minues</description>
        <formula>Created_Date_Time__c  - 0.038</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedTime Minus 55 Minutes</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Time__c</fullName>
        <formula>MID ( TEXT (CreatedDate ), 12, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Risk_Case_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has a case been created to assess the credit risk for the Opportunity</description>
        <label>Credit Risk Case Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Competitor_Contract_Exp_Date__c</fullName>
        <description>Created by LM on 9/3/2013 for Phase 2 rollout</description>
        <label>Current Competitor Contract Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Competitor_Contract__c</fullName>
        <description>Created by LM on 9/3/2013 for Phase 2 rollout</description>
        <label>Current Competitor Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biz360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blinkx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BurrellesLuce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Newswire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCN Matthews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedrom-SNi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Won&apos;t Say/Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Mention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomScoop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CyberAlert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cymfony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dateline Media, Honolulu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dna13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Factiva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FP Infomart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobeNewswire/NASDAQ/Glide Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoogleNews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gorkana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KD Paine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LexisNexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Listlogix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Provider</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Deal_In_Date__c</fullName>
        <description>Added by LM on 3/4/2013; From MS CRM</description>
        <label>Deal In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demonstration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Demonstration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>For Broadcast Sales, you can put the description of your Opp here.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Difficult_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Difficult Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Exemption_Criteria__c</fullName>
        <description>Added by LM on 2/26/2013; From NetSuite</description>
        <label>Digital Exemption Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>Delay - Ad Hoc Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay - CisionPoint Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay - Critical Mention Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay - IQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay - Other See Order Log</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay - Showroom Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay - Technical Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay - Workload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - 1 clip exceeding 30 minute TRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - 2 clips exceeding 20 minute TRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - 3 or 4 clips exceeding 15 minute TRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - 5 or more clips on a single order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - Cision Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - Format (AVI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - Format (Flash)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - Format (H.264)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - Format (HiRes QT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - Format (HiRes WMV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - Format (MP4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - Format (MPEG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - Format (MPEG2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - HD Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - See Feed (or Chatter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - Social Media Snapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - Waiting on AE for additional information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - Waiting on product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt - Web clip</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Digital_Notification_Email__c</fullName>
        <label>Digital Notification Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Post_Date_Time__c</fullName>
        <description>Added by LM on 2/26/2013; From NetSuite</description>
        <label>Digital Post Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Do_Not_Validate_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if it is a foreign address or valid address and it will override the address validation</inlineHelpText>
        <label>Do Not Validate Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_they_want_to_go_with_Cision__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Do they want to go with Cision?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_they_want_to_purchase_this_month__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Do they want to purchase this month?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocuSign_Contract_Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 4/28/2014 for Phase2 DocuSign Rollout</description>
        <label>DocuSign Contract Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocuSign_Contract_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 4/29/2014 for Phase2 DocuSign Rollout</description>
        <label>DocuSign Contract Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocuSign_Contract_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 4/28/2014 for Phase2 DocuSign Rollout</description>
        <label>DocuSign Contract Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocuSign_Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 4/16/2014 for Phase2; populated by DocuSign when a Customer signs the contract</description>
        <label>DocuSign Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Changes__c</fullName>
        <description>This field is used by Sales Reps to indicate any changes they may have made to contracts send to a client.</description>
        <inlineHelpText>Please indicate any changes you have made to the contract here.</inlineHelpText>
        <label>Document Changes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Added by LM on 2/21/2013; From NetSuite</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Editor__c</fullName>
        <label>Editor</label>
        <picklist>
            <picklistValues>
                <fullName>*AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Aper, C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Bleizeffer, S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Gardner, E.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Gilbert, J.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Hawkins, T.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-McIlrath, C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Moore, K.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Novak, P.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Perkins, J.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Robinson, K.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Reyes, P.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Schoening, Y.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Smith, D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Tye, D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Waters, B.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creat-Hansen, T.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Buenavista, J.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Cantero, A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Ellis, L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Ream, L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Samperisi, C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Amyot, B.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Codner, S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Lee, D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Leslie, L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Liatsis, M.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-McKeon, E.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecast_Value_Formula__c</fullName>
        <formula>IF( ISPICKVAL(Type ,&quot;Renewal&quot;), Bookings__c  *  Probability, 
IF((ISPICKVAL(Type, &quot;New&quot;) &amp;&amp; Probability &gt;=75), Amount, 
IF(ISPICKVAL(Type ,&quot;Upsell&quot;) , Bookings__c  *  Probability,
IF(ISPICKVAL(Type, &quot;Renewal(Paid Extension)&quot;), Bookings__c  *  Probability, null))))</formula>
        <label>Forecast Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Value__c</fullName>
        <description>Created by LM on 11/5/2013 for Phase 2 rollout</description>
        <inlineHelpText>Free-form field for Renewals to indicate the Forecast value for Reports</inlineHelpText>
        <label>Forecast Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Date__c</fullName>
        <description>Created by LM on 7/15/2014 for Josh Yager&apos;s reporting needs</description>
        <label>Fulfillment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Status__c</fullName>
        <label>Fulfillment Status</label>
        <picklist>
            <picklistValues>
                <fullName>**CA-NA DNR Reroute RUSH**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**Route to MR**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**Split Required**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**TR-Review**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**HD**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in Production Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mis-Routed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed Due Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor Footage Acquired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Internal Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Entry Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - See Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Questionable Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R*U*S*H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R*U*S*H - Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GAS_or_Managed_Service_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GAS or Managed Service Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GP_Cust_ID__c</fullName>
        <formula>Account.GP_Cust_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP Cust ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gone_Silent_Date__c</fullName>
        <description>Added by LM on 12/16/2013 for Ari Shapiro</description>
        <label>Gone Silent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gone_Silent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 12/16/2013 for Ari Shapiro</description>
        <label>Gone Silent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Unable_To_Meet_Due_Date__c</fullName>
        <description>Added by LM on 2/21/2013; From NetSuite</description>
        <label>If Unable To Meet Due Date</label>
        <picklist>
            <picklistValues>
                <fullName>Split Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Route back to AE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_CC_Recipients__c</fullName>
        <label>Invoice CC Recipients</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact_Email__c</fullName>
        <inlineHelpText>Please input the email address for the Invoice Contact above.</inlineHelpText>
        <label>Invoice Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact_Name__c</fullName>
        <label>Invoice Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact_Phone__c</fullName>
        <description>Added by LM on 11/13/2013 for Phase2</description>
        <label>Invoice Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Address_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Address Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JavaScriptSafeName__c</fullName>
        <description>This is a hidden field that contains the Javascript safe version of the name</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Name, &quot;#&quot;, &quot;%23&quot;) , &quot;\&quot;&quot;, &quot;\\\&quot;&quot;), &quot;&apos;&quot;, &quot;\\&apos;&quot;)</formula>
        <label>JavaScriptSafeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Power_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 9/3/2013 for Phase 2 rollout</description>
        <label>Key Contact/Power User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Key Contact/Power User)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_users_are_recommending_Cision__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Key users are recommending Cision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Year_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 10/11/2013 for Phase 2 rollout</description>
        <inlineHelpText>For assigning Renewals only</inlineHelpText>
        <label>Last Year Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Year_Spend__c</fullName>
        <label>Last Year Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Year_Total_Spend__c</fullName>
        <description>Created by LM on 11/5/2013 for Phase 2 rollout</description>
        <inlineHelpText>All products purchased last year. (Renewable and Non-Renewable)</inlineHelpText>
        <label>Last Year Total Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Opp_Record_Type__c</fullName>
        <label>Lead Opp Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Process_Known__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 9/13/2013 for Phase 2 rollout</description>
        <label>Legal Process Known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_s_Notes__c</fullName>
        <description>Created by LM on 10/25/2013 for Phase 2 rollout</description>
        <label>Manager&apos;s Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multi_Year_Deal_Opps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 3/4/2013; From MS CRM</description>
        <label>Multi-Year Deal Opps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mutual_Close_Plan__c</fullName>
        <description>Created by LM on 10/23/2013 for Phase 2 rollout</description>
        <label>Mutual Close Plan</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Needs_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Needs Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Biz_Engagement_Date__c</fullName>
        <description>Created by LM on 4/22/2014 for Phase2</description>
        <label>New Biz Engagement Date</label>
        <type>Date</type>
    </fields>
</CustomObject>